Updated verve guard